--- a/redirects.yml
+++ b/redirects.yml
@@ -1,2 +1,2 @@
-- from: 
-to: 
+- from: /test1
+to: https://www.linkedin.com/pulse/cryptogram-profits-unlocking-passive-crypto-earnings-without-bawz-xmque
