--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: KayBeazy Blog
-plugins: -jekyll-redirect-from
-jekyll-redirect-from: default_status: 301
+plugins:
+  - jekyll-redirect-from
+
+jekyll-redirect-from:
+  default_status: 301
+  
